# mmfwd

./: .gitignore  README.md  mmfwd.service  pyproject.toml
doc/: mmfwd.sample.yaml
src/mmfwd/: __init__.py  __main__.py
